cmake_minimum_required(VERSION 3.21)
project(untitled C)

set(CMAKE_C_STANDARD 99)

add_executable(untitled main.c 2609.c 2748.c 5565.c 1978.c 2581.c 1920.c 1213.c 9012.c 10773.c)

add_executable(main main.c)
add_executable(test 2609.c)
add_executable(2748 2748.c)
add_executable(5565 5565.c)
add_executable(1978 1978.c)
add_executable(2581 2581.c)
add_executable(1920 1920.c)
add_executable(1213 1213.c)
add_executable(9012 9012.c)
add_executable(10773 10773.c)