cmake_minimum_required(VERSION 3.21)
project(untitled C)

set(CMAKE_C_STANDARD 99)

add_executable(untitled main.c 2609.c 2748.c 5565.c 1978.c 2581.c 1920.c 1213.c 9012.c 10773.c 10808.c 1316.c 4949.c 1213_answer.c 17427.c prime.c 17425.c 4375.c classone.c)

add_executable(main main.c)
add_executable(test 2609.c)
add_executable(2748 2748.c)
add_executable(5565 5565.c)
add_executable(1978 1978.c)
add_executable(2581 2581.c)
add_executable(1920 1920.c)
add_executable(1213 1213.c)
add_executable(9012 9012.c)
add_executable(10773 10773.c bronze/2443.c gold/17298.c datastructure/stack.c datastructure/queue.c)
add_executable(10808 10808.c)
add_executable(1316 1316.c)
add_executable(4949 4949.c)
add_executable(1213_answer 1213_answer.c)
add_executable(17427 17427.c)
add_executable(prime prime.c)
add_executable(17425 17425.c)
add_executable(4375 4375.c)
add_executable(classone classone.c)
add_executable(classtwo_1018 classtwo/1018.c classtwo/4153.c classtwo/10845.c classtwo/10828.c classtwo/11650.c "classtwo/10866_deque.c")
add_executable(classtwo_1181 classtwo/1181.c)
add_executable(platinum_5615 platinum/5615.c)
add_executable(classtwo_1085 classtwo/1085.c)
add_executable(classtwo_1929 classtwo/1929.c)
add_executable(classtwo_2108 "classtwo/2108(mergesort).c")
add_executable(classtwo_2751 classtwo/2751.c)
add_executable(silver_2805 silver/2805.c)
add_executable(silver_1920 silver/1920.c silver/17952.c)
add_executable(classtwo_4153 classtwo/4153.c)
add_executable(classtwo_10814 classtwo/10814.c)
add_executable(classtwo_10250 classtwo/10250.c)
add_executable(bronze_2443 bronze/2443.c)
add_executable(gold_17298 gold/17298.c)
add_executable(classtwo_11650 classtwo/11650.c)
add_executable(classtwo_10866 classtwo/10866_deque.c)